bugfix/modal-windows

--- a/src/partials/fruits.html
+++ b/src/partials/fruits.html
@@ -171,7 +171,7 @@
             </li>
         </ul>
 
-        <button class="fruits-btn btn" type="button">
+        <button class="fruits-btn btn js-open-modal" data-modal="1" type="button">
             <svg class="fruits-btn-icon" width="14" height="14">
                 <use href="./img/icons/icons.svg#icon-fuits-btn"></use>
             </svg>
