--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,20 +1,55 @@
 <header class="header">
-  <button class="basket-button"></button>
-  <button
-    class="mobile-menu-button"
-    aria-expanded="false"
-    aria-controls="mobile-menu"
-    data-menu-button
-  >
-    <svg class="mobile-menu-icon" width="24" height="24">
+  <div class="heder-container container">
+    <div class="header-tablet-position">
+      <nav class="heder-nav">
+        <ul class="list nav-list">
+          <li class="nav-list-item">
+            <a href="" class="link nav-list-link">How It Works</a>
+          </li>
+          <li class="nav-list-item">
+            <a href="#fruits" class="link nav-list-link">Fruits</a>
+          </li>
+          <li class="nav-list-item">
+            <a href="#heder-contacts-ankor" class="link nav-list-link"
+              >Contacts</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <a href="./index.html" class="heder-link link">
+        <svg class="nav-icon-logo" width="16" height="16">
+          <use href="./img/icons/icons.svg#icon-logo"></use>
+        </svg>
+        <span class="nav-logo-text">fresh harvest box</span>
+      </a>
+    </div>
+    <button class="heder-btn" type="button" data-modal-close>
+      <svg class="heder-modal-icon" width="28" height="28">
+        <use href="./img/icons/icons.svg#icon-basket-heder"></use>
+      </svg>
+    </button>
+    <button
+      class="mobile-menu-button"
+      aria-expanded="false"
+      aria-controls="mobile-menu"
+      data-menu-button
+      fdprocessedid="6bmx38"
+    >
+    <svg class="heder-mobile-market" width="28" height="28">
       <use
-        class="mobile-menu-icon-open"
-        href="./img/icons/icons.svg#icon-mob-menu"
-      ></use>
-      <use
-        class="mobile-menu-icon-close"
-        href="./img/icons/icons.svg#icon-window-close"
+        href="./img/icons/icons.svg#icon-header-packet"
       ></use>
     </svg>
-  </button>
+      <svg class="heder-mobile-menu-icon" width="24" height="24">
+        <use
+          class="mobile-menu-icon-open"
+          href="./img/icons/icons.svg#icon-mob-menu"
+        ></use>
+        <use
+          class="mobile-menu-icon-close"
+          href="./img/icons/icons.svg#icon-window-close"
+        ></use>
+      </svg>
+    </button>
+  </div>
 </header>
