--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -3,6 +3,7 @@
 }
 .hero-container {
   padding-top: 104px;
+  margin-bottom: 150px;
 }
 
 @media screen and (min-width: 375px) and(max-width:767px) {
@@ -10,19 +11,13 @@
     width: 375px;
   }
 }
+
 .background {
   position: relative;
   max-width: 335px;
   height: 509px;
   margin: auto;
   margin-bottom: 71px;
-  border-radius: 500px;
-
-  background-image: url(../img/hero/hero-girl-mob@1.png);
-
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
 }
 @media screen and (min-width: 768px) {
   .background {
@@ -30,10 +25,12 @@
     height: 702px;
     margin-bottom: 79px;
   }
+  .hero-photo {
+    width: 486px;
+    height: 742px;
+  }
 }
 
-@media screen and (min-width: 1280px) {
-}
 .dec-straw {
   position: absolute;
   top: -10%;
@@ -65,6 +62,7 @@
     left: -31%;
     width: 183.21px;
     height: 124.61px;
+    transform: rotate(20deg);
   }
   .dec-straw {
     top: -10%;
@@ -84,10 +82,10 @@
   font-weight: 500;
   font-size: 28px;
   line-height: 1;
-
+  letter-spacing: -0.04em;
   color: #ffffff;
 
-  /* text-shadow: 0px 4px 70px rgba(0, 0, 0, 0.1); */
+  text-shadow: 0px 4px 70px rgba(0, 0, 0, 0.1);
 }
 
 @media screen and (min-width: 768px) {
@@ -301,6 +299,44 @@
   .hero-container-deck {
     padding-top: 104px;
   }
-  .cards-position {
+}
+@media screen and (min-width: 1280px) {
+  .hero-container {
+    position: relative;
+  }
+  .wrap-position {
+    position: absolute;
+    left: 0;
+    top: 41%;
+  }
+  .wrap-cards {
+    position: absolute;
+    /* width: 281px; */
+    /* left: 0;
+    top: 41%; */
+  }
+  .low-wrap {
+    /* display: flex;
+    justify-content: center; */
+  }
+  .tag-list {
+    position: absolute;
+    right: 0;
+    top: 37%;
+  }
+  .low-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .top-card {
+    width: 100%;
+  }
+  .width {
+    width: 281px;
+  }
+  .hero-imglow {
+    height: 187px;
+    width: 239px;
   }
 }
