--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,78 +3,72 @@
     <div class="background">
       <img
         class="dec-straw"
+        srcset="../img/opt-img/hero/strawberry-hero-mob-w56@1x.png x1,
+        ../img/opt-img/hero/strawberry-hero-mob-w56@2x.png x2"
         src="../img/opt-img/hero/strawberry-hero-tabl-w108@1x.png"
         width="56"
         height="56"
       />
-      <!-- <img
-        class="dec-straw"
-        srcset="
-          ./img/opt-img/hero/strawberry-hero-mob-w56@1x.png 1x,
-          ./img/opt-img/hero/strawberry-hero-mob-w66@1x.png 2x
-        "
-        src="./img/opt-img/hero/strawberry-hero-desk-w120@1x.png "
-        alt="strawberry"
-        width="56"
-        loading="lazy"
-      /> -->
+
       <img
         class="dec-babnan"
-        src="../img/hero/banana-mob@1.png"
+        src="../img/opt-img/hero/banana-hero-mob-w66@1x.png"
+        srcset="../img/opt-img/hero/banana-hero-mob-w66@1x.png x1,
+        ../img/opt-img/hero/banana-hero-mob-w66@2x.png x2"
         width="66"
         height="44"
       />
-      <!-- <img
-        class="dec-babnan"
-        srcset="
-          ./img/opt-img/hero/banana-hero-mob-w66@1x.png 1x,
-          ./img/opt-img/hero/banana-hero-mob-w66@2x.png 2x
-        "
-        src="./img/opt-img/hero/banana-hero-mob-w66@1x.png"
-        alt="banana"
-        width="66"
-        t
+
+      <img
+        srcset="../img/opt-img/hero/girl-with-orange-w836mob@1x.jpg x1,
+      ../img/opt-img/hero/girl-with-orange-desk-tabl.jpg x2"
+        src="../img/hero/girlwithborder-mob@1.png"
+        alt="girl-with-orange"
+        class="hero-photo"
+        width="335"
+        height="509"
         loading="lazy"
-      /> -->
+      />
       <h1 class="hero-text">
         fresh harvest box is your 0ne-stop place for a delicious fruit basket
       </h1>
       <button class="hero-btn" type="button">shop<br />now</button>
     </div>
-    <div class="hero-cards">
-      <div class="wrap-cards">
-        <p class="card-text">
-          Our expertly curated fruit baskets are made with the freshest, highest
-          quality fruits available. Whether you are looking for a healthy snack
-          or a gift for a loved one, Fresh Harvest Box has got you covered.
-        </p>
-        <div class="top-card">
-          <h3 class="top-card-text">Fruit</h3>
-          <div class="thamb-hero">
-            <img
-              class="hero-img"
-              src="/img/hero/nwatermelon-mob@1.png"
-              width="239"
-              height="172"
-            />
-            <p class="low-card-text">
-              Refreshing and juicy, watermelon is the perfect summer treat and a
-              great source of hydration
-            </p>
+    <ul class="hero-cards list">
+      <li class="wrap-position width">
+        <div class="wrap-cards">
+          <p class="card-text">
+            Our expertly curated fruit baskets are made with the freshest,
+            highest quality fruits available. Whether you are looking for a
+            healthy snack or a gift for a loved one, Fresh Harvest Box has got
+            you covered.
+          </p>
+          <div class="top-card">
+            <h3 class="top-card-text">Fruit</h3>
+            <div class="thamb-hero">
+              <img
+                class="hero-img"
+                src="/img/hero/nwatermelon-mob@1.png"
+                width="239"
+                height="172"
+              />
+              <p class="low-card-text">
+                Refreshing and juicy, watermelon is the perfect summer treat and
+                a great source of hydration
+              </p>
+            </div>
           </div>
-        </div>
-      </div>
-      <div class="tag-list">
-        <ul class="tags">
+        </div></li>
+      <li class="tag-list width">
+         <ul class="tags">
           <li class="hero-teg">#organic</li>
           <li class="hero-teg">#products</li>
           <li class="hero-teg">#basket</li>
           <li class="hero-teg">#fruits</li>
         </ul>
-
-        <div class="top-card low-card">
+         <div class="top-card low-card">
           <h3 class="top-card-text">Fruit</h3>
-          <div class="wrap-cards">
+          <div class="wrap-cards low-wrap">
             <img
               class="hero-img hero-imglow"
               src="../img/hero/strawberrybox-mob@1.png"
@@ -86,82 +80,62 @@
               antioxidants, making them a delicious and healthy snack
             </p>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- </div> -->
-  <!-- <div class="hero-container-deck container">
-    <div class="background">
-      <img
-        class="dec-straw"
-        src="../img/hero/imagestrawberry-background-mob@1.png"
-        width="56"
-        height="56"
-      />
-      <img
-        class="dec-babnan"
-        src="../img/hero/banana-mob@1.png"
-        width="66"
-        height="44"
-      />
-      <h1 class="hero-text">
-        fresh harvest box is your 0ne-stop place for a delicious fruit basket
-      </h1>
-      <button class="hero-btn" type="button">shop<br />now</button>
 
-      <div class="cards-position">
-        <div class="hero-cards">
-          <div class="wrap-cards">
-            <p class="card-text">
-              Our expertly curated fruit baskets are made with the freshest,
-              highest quality fruits available. Whether you are looking for a
-              healthy snack or a gift for a loved one, Fresh Harvest Box has got
-              you covered.
-            </p>
-            <div class="top-card">
-              <h3 class="top-card-text">Fruit</h3>
-              <div class="thamb-hero">
-                <img
-                  class="hero-img"
-                  src="/img/hero/nwatermelon-mob@1.png"
-                  width="239"
-                  height="172"
-                />
-                <p class="low-card-text">
-                  Refreshing and juicy, watermelon is the perfect summer treat
-                  and a great source of hydration
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
+      </li>
+    </ul>
 
-        <div class="tag-list">
-          <ul class="tags">
-            <li class="hero-teg">#organic</li>
-            <li class="hero-teg">#products</li>
-            <li class="hero-teg">#basket</li>
-            <li class="hero-teg">#fruits</li>
-          </ul>
-
-          <div class="top-card low-card">
+    <!-- <div class="hero-cards">
+      <div class="wrap-position">
+        <div class="wrap-cards">
+          <p class="card-text">
+            Our expertly curated fruit baskets are made with the freshest,
+            highest quality fruits available. Whether you are looking for a
+            healthy snack or a gift for a loved one, Fresh Harvest Box has got
+            you covered.
+          </p>
+          <div class="top-card">
             <h3 class="top-card-text">Fruit</h3>
-            <div class="wrap-cards">
+            <div class="thamb-hero">
               <img
-                class="hero-img hero-imglow"
-                src="../img/hero/strawberrybox-mob@1.png"
+                class="hero-img"
+                src="/img/hero/nwatermelon-mob@1.png"
                 width="239"
-                height="187"
+                height="172"
               />
               <p class="low-card-text">
-                Sweet and juicy, strawberries are packed with vitamin C and
-                antioxidants, making them a delicious and healthy snack
+                Refreshing and juicy, watermelon is the perfect summer treat and
+                a great source of hydration
               </p>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="tag-list">
+        <ul class="tags">
+          <li class="hero-teg">#organic</li>
+          <li class="hero-teg">#products</li>
+          <li class="hero-teg">#basket</li>
+          <li class="hero-teg">#fruits</li>
+        </ul> -->
+
+        <!-- <div class="top-card low-card">
+          <h3 class="top-card-text">Fruit</h3>
+          <div class="wrap-cards low-wrap">
+            <img
+              class="hero-img hero-imglow"
+              src="../img/hero/strawberrybox-mob@1.png"
+              width="239"
+              height="187"
+            />
+            <p class="low-card-text">
+              Sweet and juicy, strawberries are packed with vitamin C and
+              antioxidants, making them a delicious and healthy snack
+            </p>
+          </div> -->
+        </div>
+      </div>
     </div>
-  </div> -->
+  </div>
+  <!-- </div> -->
 </section>
