--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,55 +1,31 @@
 <header class="header">
-  <div class="heder-container container">
-    <div class="header-tablet-position">
-      <nav class="heder-nav">
-        <ul class="list nav-list">
-          <li class="nav-list-item">
-            <a href="" class="link nav-list-link">How It Works</a>
-          </li>
-          <li class="nav-list-item">
-            <a href="#fruits" class="link nav-list-link">Fruits</a>
-          </li>
-          <li class="nav-list-item">
-            <a href="#heder-contacts-ankor" class="link nav-list-link"
-              >Contacts</a
-            >
-          </li>
-        </ul>
-      </nav>
-      <a href="./index.html" class="heder-link link">
-        <svg class="nav-icon-logo" width="16" height="16">
-          <use href="./img/icons/icons.svg#icon-logo"></use>
+  <div class="container header-containet">
+    <nav class="header-nav">
+      <ul class="list header-list-nav">
+        <li><a href="#work-ankor" class="link header-link-nav">How It Works</a></li>
+        <li><a href="#fruits" class="link header-link-nav">Fruits</a></li>
+        <li><a href="#footer-contacts-ankor" class="link header-link-nav">Contacts</a></li>
+      </ul>
+    </nav>
+    <a href="./index.html" class="link header-logo">
+      <svg class="header-logo-icon" width="16" height="16">
+        <use href="./img/icons/icons.svg#icon-logo"></use>
+      </svg>
+      <span class="header-text-wrapper">fresh harvest box</span>
+    </a>
+    <div class="header-btn-wrapper">
+      <button class="basket-button header-button js-open-modal" data-modal="1">
+        <svg class="header-basket-icon" width="16" height="16">
+          <use href="./img/icons/icons.svg#icon-header-packet"></use>
         </svg>
-        <span class="nav-logo-text">fresh harvest box</span>
-      </a>
+      </button>
+      <button class="mobile-menu-button header-button" aria-expanded="false" aria-controls="mobile-menu"
+        data-menu-button>
+        <svg class="mobile-menu-icon" width="24" height="24">
+          <use class="mobile-menu-icon-open" href="./img/icons/icons.svg#icon-mob-menu"></use>
+          <use class="mobile-menu-icon-close" href="./img/icons/icons.svg#icon-window-close"></use>
+        </svg>
+      </button>
     </div>
-    <button class="heder-btn" type="button" data-modal-close>
-      <svg class="heder-modal-icon" width="28" height="28">
-        <use href="./img/icons/icons.svg#icon-basket-heder"></use>
-      </svg>
-    </button>
-    <button
-      class="mobile-menu-button"
-      aria-expanded="false"
-      aria-controls="mobile-menu"
-      data-menu-button
-      fdprocessedid="6bmx38"
-    >
-    <svg class="heder-mobile-market" width="28" height="28">
-      <use
-        href="./img/icons/icons.svg#icon-header-packet"
-      ></use>
-    </svg>
-      <svg class="heder-mobile-menu-icon" width="24" height="24">
-        <use
-          class="mobile-menu-icon-open"
-          href="./img/icons/icons.svg#icon-mob-menu"
-        ></use>
-        <use
-          class="mobile-menu-icon-close"
-          href="./img/icons/icons.svg#icon-window-close"
-        ></use>
-      </svg>
-    </button>
   </div>
 </header>
