--- a/src/css/common.css
+++ b/src/css/common.css
@@ -6,21 +6,22 @@ body {
 
   background-color: var(--brand-cl);
 }
+
 .overflow-hidden {
   overflow: hidden;
 }
 
 .section {
-  margin-bottom: 80px;
+  padding-bottom: 80px;
 }
 @media only screen and (min-width: 768px) {
   .section {
-    margin-bottom: 144px;
+    padding-bottom: 144px;
   }
 }
 @media only screen and (min-width: 1280px) {
   .section {
-    margin-bottom: 150px;
+    padding-bottom: 150px;
   }
 }
 
@@ -138,58 +139,58 @@ body {
   }
 }
 
-/* Modal Windows */
-.overlay {
-   
-   /* Скрываем подложку  */
-   opacity: 0;
-   visibility: hidden;
-   
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 100%;
-   background-color: rgba(0, 0, 0, .5);
-   z-index: 20;
-   transition: .3s all;
-}
+/**
+  |============================
+  | MODAL STYLES
+  |============================
+*/
 
+.overlay {
+  /* Скрываем подложку  */
+  opacity: 0;
+  visibility: hidden;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 20;
+  transition: 0.3s all;
+}
 
 /* Стили для модальных окон */
 
 .modal {
-   
-   /* Скрываем окна  */
-   opacity: 0;
-   visibility: hidden;
-   
-   
-   /*  Установаем ширину окна  */
-   width: 100%;
-   max-width: 500px;
-   
-   /*  Центрируем и задаем z-index */
-   position: fixed;
-   top: 50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   z-index: 30; /* Должен быть выше чем у подложки*/
-   
-   /*  Побочные стили   */
-   box-shadow: 0 3px 10px -.5px rgba(0, 0, 0, .2); 
-   text-align: center;
-   padding: 30px;
-   border-radius: 3px;
-   background-color: #fff;
-   transition: 0.3s all;
-}
+  /* Скрываем окна  */
+  opacity: 0;
+  visibility: hidden;
 
+  /*  Установаем ширину окна  */
+  width: 100%;
+  max-width: 500px;
+
+  /*  Центрируем и задаем z-index */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 30; /* Должен быть выше чем у подложки*/
+
+  /*  Побочные стили   */
+  box-shadow: 0 3px 10px -0.5px rgba(0, 0, 0, 0.2);
+  text-align: center;
+  padding: 30px;
+  border-radius: 3px;
+  background-color: #fff;
+  transition: 0.3s all;
+}
 
 /* Стили для активных классов подложки и окна */
 
 .modal.active,
-.overlay.active{
-   opacity: 1;
-   visibility: visible;
+.overlay.active {
+  opacity: 1;
+  visibility: visible;
 }
