--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -2,69 +2,148 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  bottom: 0;
+  right: 0;
   z-index: 1000;
-  background-color: #ffffff85;
-}
-.modal-order {
-  position: relative;
-  padding: 20px 20px;
-  height: 100%;
-  overflow-y: scroll;
 
-  background-color: #ffffff;
+  background-color: rgba(46, 47, 66, 0.4);
+
+  opacity: 1;
+  visibility: visible;
+  pointer-events: initial;
+
+  transition: opacity 200ms ease, visibility 200ms ease,
+    backdrop-filter 200ms ease;
+}
+
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+
+  transition-delay: 400ms;
+}
+
+.modal-order {
+  position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) rotate(0) scale(1);
+  opacity: 1;
+
+  width: 395px;
+  min-height: 903px;
+  padding: 20px;
+
+  background-color: #ffffff;
   border-radius: 20px;
-  /* background-image: url(../img/opt-img/pop-up/girl-with-banana-tabl-w469@1x.png); */
-  max-width: 395px;
 }
+@media only screen and (max-width: 474px) {
+  .modal-order {
+    min-width: 320px;
+    max-width: 395px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .modal-order {
+    width: 704px;
+    min-height: 853px;
+    padding: 40px;
+  }
+}
+
+.backdrop.is-hidden .modal-order {
+  transform: translate(-50%, -50%) rotate(360deg) scale(0.2);
+  opacity: 0;
+}
+
 .modal-close-btn {
-  border: none;
-  background-color: transparent;
-  border-radius: 50%;
-  padding: 0;
-  width: 24px;
-  height: 24px;
   position: absolute;
   top: 20px;
   right: 20px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 24px;
+  height: 24px;
+  padding: 0;
+
+  color: var(--brand-cl);
+
+  background-color: transparent;
+  border: none;
+
+  cursor: pointer;
 }
+
 .modal-close-btn-icon {
-  stroke: #ae1332;
+  stroke: currentColor;
 }
-.modal-order-text {
+
+.modal-order-title {
+  display: block;
   margin-bottom: 40px;
+
   font-weight: 500;
   font-size: 28px;
   line-height: 1;
   letter-spacing: -0.04em;
   text-transform: uppercase;
 
-  color: #ae1332;
+  color: var(--brand-cl);
 
   text-shadow: 0px 4px 70px rgba(0, 0, 0, 0.1);
 }
-.modal-basket-list {
-  display: flex;
-  flex-direction: column;
-  gap: 12px;
-  margin-bottom: 40px;
-  align-items: center;
+@media only screen and (min-width: 768px) {
+  .modal-order-title {
+    display: block;
+    margin-bottom: 40px;
+
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.1;
+    letter-spacing: -0.04em;
+    text-transform: uppercase;
+
+    color: var(--brand-cl);
+
+    text-shadow: 0px 4px 70px rgba(0, 0, 0, 0.1);
+  }
 }
+
+.modal-basket-list {
+  --len: 12px;
+
+  margin-bottom: 40px;
+}
+
 .modal-basket-item {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 20px;
-  padding-right: 32px;
-  border-radius: 20px;
-  width: 100%;
+  position: relative;
   display: flex;
   justify-content: space-between;
-  position: relative;
+
+  max-width: 295px;
+  padding: 16px 32px 8px 20px;
+
+  border-radius: 20px;
 }
+@media only screen and (min-width: 768px) {
+  .modal-basket-item {
+    position: relative;
+
+    display: block;
+    max-width: 200px;
+    padding: 40px 20px 14px 20px;
+
+    --item: 3;
+
+    border-radius: 20px;
+  }
+}
+
+/* BG CARDS */
 .brown-item {
   background-color: #f8766b;
 }
@@ -74,103 +153,138 @@
 .green-item {
   background-color: #9dc262;
 }
+
+@media only screen and (max-width: 767px) {
+  .modal-basket-text-wrap {
+    padding-top: 4px;
+  }
+}
+
 .modal-basket-text {
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.28;
-  color: #ffffff;
+  line-height: 1.33;
   letter-spacing: -0.04em;
+
+  color: #ffffff;
+
   margin-bottom: 2px;
 }
+
 .modal-bascet-desk {
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.28;
+  line-height: 1.29;
   letter-spacing: -0.02em;
+
   color: #ffffff;
 }
+@media only screen and (min-width: 768px) {
+  .modal-bascet-desk {
+    margin-bottom: 4px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .basket-img {
+    margin: 0 auto;
+  }
+}
+
 .modal-basket-label {
   position: absolute;
   top: 0;
   right: 0;
-  display: block;
-  width: 100%;
-  height: 100%;
 }
+
 .modal-basket-checkbox {
-  width: 16px;
-  height: 16px;
   position: absolute;
   top: 14px;
   right: 14px;
+
+  appearance: none;
+  flex-shrink: 0;
+  width: 16px;
+  height: 16px;
+
   border-radius: 4px;
   border: 1.5px solid #ffffff;
-}
-.modal-basket-input:checked + .modal-basket-checkbox {
-  background-image: url(../img/opt-img/pop-up/pick.svg);
+
+  background-image: url("data:image/svg+xml,%3Csvg width='10' height='8' viewBox='0 0 10 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.44558 0.255056C8.61838 0.089653 8.84834 -0.00178848 9.08693 2.65108e-05C9.32551 0.0018415 9.55407 0.0967713 9.72436 0.264784C9.89466 0.432797 9.99337 0.660752 9.99968 0.900549C10.006 1.14034 9.91939 1.37323 9.75816 1.55005L4.86357 7.70436C4.7794 7.79551 4.67782 7.86865 4.5649 7.91942C4.45198 7.97018 4.33003 7.99754 4.20636 7.99984C4.08268 8.00214 3.95981 7.97935 3.8451 7.93282C3.73038 7.88629 3.62618 7.81698 3.53872 7.72903L0.292827 4.46564C0.202435 4.38096 0.129933 4.27884 0.0796475 4.16537C0.0293621 4.05191 0.00232279 3.92942 0.000143182 3.80522C-0.00203643 3.68102 0.0206883 3.55765 0.0669613 3.44248C0.113234 3.3273 0.182108 3.22267 0.269473 3.13483C0.356838 3.047 0.460905 2.97775 0.575465 2.93123C0.690026 2.88471 0.812734 2.86186 0.936267 2.86405C1.0598 2.86624 1.18163 2.89343 1.29449 2.94398C1.40734 2.99454 1.50892 3.06743 1.59315 3.15831L4.16189 5.73967L8.42227 0.28219C8.42994 0.272694 8.43813 0.263635 8.4468 0.255056H8.44558Z' fill='%23F4F4FD'/%3E%3C/svg%3E");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: 0;
+
+  cursor: pointer;
 }
-.modal-fruits-form {
+
+.modal-basket-checkbox:checked {
+  background-size: 6px;
 }
-.form-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 14px;
-}
+
 .modal-fruit-input {
   width: 100%;
+  padding: 14px 24px;
+  margin-bottom: 14px;
+
+  line-height: 1.29;
+  letter-spacing: -0.04em;
+
+  color: rgb(0, 0, 0, 0.5);
+
+  border: 1px solid rgba(0, 0, 0, 0.3);
   border-radius: 100px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  padding: 14px 24px;
-  font-size: 14px;
-  line-height: 1.33;
-
-  letter-spacing: -0.04em;
-
-  color: #000000;
-
-  opacity: 0.5;
-}
-.modal-fruits-textaria {
-  width: 100%;
-  height: 132px;
-  border-radius: 20px;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  padding: 14px 24px;
-  resize: none;
-  font-size: 14px;
-  line-height: 1.33;
-  letter-spacing: -0.04em;
-  color: #000000;
-  opacity: 0.5;
 }
 
 .modal-fruit-input:invalid {
-  outline: 2px solid #f8766b;
+  outline: 2px solid rgb(255, 0, 0, 0.6);
 }
-.modal-fruits-button {
-  font-size: 14px;
-  line-height: 1.28;
+
+.modal-fruits-textaria {
+  display: block;
+  padding: 14px 24px;
+  margin-bottom: 20px;
+
+  width: 100%;
+  min-height: 132px;
+  max-height: 180px;
+
+  line-height: 1.29;
   letter-spacing: -0.04em;
-  text-transform: capitalize;
-  color: #ffffff;
+
+  color: rgb(0, 0, 0, 0.5);
+
+  resize: none;
+
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 20px;
+}
+
+.modal-fruits-button {
   width: 92px;
   height: 42px;
-  background: #9dc162;
+
+  line-height: 1.29;
+  letter-spacing: -0.04em;
+  text-transform: capitalize;
+
+  color: #ffffff;
+
+  background-color: #9dc162;
   border-radius: 100px;
   border: none;
-  margin-top: 20px;
+
   cursor: pointer;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal-fruits-button:hover,
 .modal-fruits-button:focus {
   background-color: #ffffff;
   color: #9dc162;
 }
-@media screen and (min-width: 768px) {
+
+/* @media screen and (min-width: 768px) {
   .modal-order {
     max-width: 704px;
     padding: 40px;
@@ -215,6 +329,7 @@
   .basket-img {
     margin: 0 auto;
   }
+
   @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
     only screen and (min--moz-device-pixel-ratio: 1.5),
     only screen and (-o-min-device-pixel-ratio: 3/2),
@@ -234,10 +349,10 @@
     background-size: 471px 458px;
     background-position: right bottom;
   }
-  /* .basket-img {
+  .basket-img {
     width: 173px;
     height: 196px;
-  } */
+  }
   @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
     only screen and (min--moz-device-pixel-ratio: 1.5),
     only screen and (-o-min-device-pixel-ratio: 3/2),
@@ -247,4 +362,4 @@
       background-image: url('../img/opt-img/pop-up/girl-with-banana-desk-w471@2x.png');
     }
   }
-}
+}  */
