edis section fruits

--- a/src/css/fruits.css
+++ b/src/css/fruits.css
@@ -39,6 +39,12 @@
   }
 }
 
+.card:hover,
+.card:focus {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
+    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
 .card-title {
   font-weight: 700;
   font-size: 24px;
