--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,26 +3,26 @@
     <div class="background">
       <img
         class="dec-straw"
-        srcset="../img/opt-img/hero/strawberry-hero-mob-w56@1x.png x1,
-        ../img/opt-img/hero/strawberry-hero-mob-w56@2x.png x2"
-        src="../img/opt-img/hero/strawberry-hero-tabl-w108@1x.png"
+        srcset="./img/opt-img/hero/strawberry-hero-mob-w56@1x.png x1,
+        ./img/opt-img/hero/strawberry-hero-mob-w56@2x.png x2"
+        src="./img/opt-img/hero/strawberry-hero-tabl-w108@1x.png"
         width="56"
         height="56"
       />
 
       <img
         class="dec-babnan"
-        src="../img/opt-img/hero/banana-hero-mob-w66@1x.png"
-        srcset="../img/opt-img/hero/banana-hero-mob-w66@1x.png x1,
-        ../img/opt-img/hero/banana-hero-mob-w66@2x.png x2"
+        src="./img/opt-img/hero/banana-hero-mob-w66@1x.png"
+        srcset="./img/opt-img/hero/banana-hero-mob-w66@1x.png x1,
+        ./img/opt-img/hero/banana-hero-mob-w66@2x.png x2"
         width="66"
         height="44"
       />
 
       <img
-        srcset="../img/opt-img/hero/girl-with-orange-w836mob@1x.jpg x1,
-      ../img/opt-img/hero/girl-with-orange-desk-tabl.jpg x2"
-        src="../img/hero/girlwithborder-mob@1.png"
+        srcset="./img/opt-img/hero/girl-with-orange-w836mob@1x.jpg x1,
+      ./img/opt-img/hero/girl-with-orange-desk-tabl.jpg x2"
+        src="./img/hero/girlwithborder-mob@1.png"
         alt="girl-with-orange"
         class="hero-photo"
         width="335"
@@ -48,7 +48,7 @@
             <div class="thamb-hero">
               <img
                 class="hero-img"
-                src="/img/hero/nwatermelon-mob@1.png"
+                src="./img/hero/nwatermelon-mob@1.png"
                 width="239"
                 height="172"
               />
@@ -71,7 +71,7 @@
           <div class="wrap-cards low-wrap">
             <img
               class="hero-img hero-imglow"
-              src="../img/hero/strawberrybox-mob@1.png"
+              src="./img/hero/strawberrybox-mob@1.png"
               width="239"
               height="187"
             />
@@ -84,55 +84,6 @@
       </li>
     </ul>
 
-    <!-- <div class="hero-cards">
-      <div class="wrap-position">
-        <div class="wrap-cards">
-          <p class="card-text">
-            Our expertly curated fruit baskets are made with the freshest,
-            highest quality fruits available. Whether you are looking for a
-            healthy snack or a gift for a loved one, Fresh Harvest Box has got
-            you covered.
-          </p>
-          <div class="top-card">
-            <h3 class="top-card-text">Fruit</h3>
-            <div class="thamb-hero">
-              <img
-                class="hero-img"
-                src="/img/hero/nwatermelon-mob@1.png"
-                width="239"
-                height="172"
-              />
-              <p class="low-card-text">
-                Refreshing and juicy, watermelon is the perfect summer treat and
-                a great source of hydration
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="tag-list">
-        <ul class="tags">
-          <li class="hero-teg">#organic</li>
-          <li class="hero-teg">#products</li>
-          <li class="hero-teg">#basket</li>
-          <li class="hero-teg">#fruits</li>
-        </ul> -->
-
-        <!-- <div class="top-card low-card">
-          <h3 class="top-card-text">Fruit</h3>
-          <div class="wrap-cards low-wrap">
-            <img
-              class="hero-img hero-imglow"
-              src="../img/hero/strawberrybox-mob@1.png"
-              width="239"
-              height="187"
-            />
-            <p class="low-card-text">
-              Sweet and juicy, strawberries are packed with vitamin C and
-              antioxidants, making them a delicious and healthy snack
-            </p>
-          </div> -->
         </div>
       </div>
     </div>
