--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    margin-bottom: 0;
+    padding: 80px 0;
     background-color: #ffffff;
 }
 
@@ -7,8 +7,7 @@
     display: flex;
     flex-direction: column;
     gap: 44px;
-    padding-top: 80px;
-    padding-bottom: 80px;
+
     color: var(--brand-cl);
     font-weight: 400;
     font-size: 14px;
@@ -106,7 +105,7 @@
     }
 
     .footer-list {
-        margin-bottom: 16px;
+        margin-bottom: 34px;
     }
 
     .footer-list-icons {
