--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -10,7 +10,7 @@
               ./img/footer/image-footer.png    1x,
               ./img/footer/image-footer@2x.png 2x
             "
-            type="image/jpg"
+            type="image/png"
           />
           <!-- Mobile screen -->
           <source
@@ -19,7 +19,7 @@
               ./img/footer/image-footer-mob.png    1x,
               ./img/footer/image-footer-mob@2x.png 2x
             "
-            type="image/jpg"
+            type="image/png"
           />
           <img
             src="./img/image-footer.png"
@@ -86,7 +86,7 @@
             >
           </li>
           <li>
-              <a href="https://goo.gl/maps/4eP2H9T3cd51cepa8" target="_blank" class="link footer-address-text" rel="noreferrer noopener" aria-label="google maps" >
+              <a href="https://goo.gl/maps/dS8kxosQReKwPLUt8" target="_blank" class="link footer-address-text" rel="noreferrer noopener" aria-label="google maps" >
                 1678 S. Pioneer Road Salt Lake City
                 <span class="footer-address-postcode">UT 84104</span>
               </a>
