work-it(atribute lazy)

--- a/src/partials/work-it.html
+++ b/src/partials/work-it.html
@@ -45,6 +45,7 @@
         src="./img/work-it/freshharvestbox-mobile.gif"
         style="width: auto"
         class="image-gif"
+        loading="lazy"
       />
     </picture>
   </div>
